# artificial_data_generator

./: DOMAINS_ROADMAP.md  PLAN.md  README.md  pyproject.toml
contrib/openai-agents/: README.md  agentic-synthetic-data-mcp.yaml  banking-kyc-synthetic-data.yaml  banking-statement-ocr-synthetic-data.yaml  banking-wire-transfer-synthetic-data.yaml  healthcare-claims-synthetic-data.yaml  healthcare-eob-docs-synthetic-data.yaml  healthcare-pharmacy-claims-synthetic-data.yaml  healthcare-provider-roster-synthetic-data.yaml  hr-payroll-synthetic-data.yaml  hr-time-attendance-synthetic-data.yaml  insurance-claims-intake-synthetic-data.yaml  insurance-declaration-docs-synthetic-data.yaml  insurance-policy-underwriting-synthetic-data.yaml  legal-amendment-chain-synthetic-data.yaml  legal-contract-docs-synthetic-data.yaml  legal-contract-metadata-synthetic-data.yaml  logistics-customs-docs-synthetic-data.yaml  logistics-warehouse-inventory-synthetic-data.yaml  manufacturing-inspection-cert-docs-synthetic-data.yaml  manufacturing-lot-traceability-synthetic-data.yaml  manufacturing-quality-inspection-synthetic-data.yaml  public-sector-procurement-synthetic-data.yaml  public-sector-tender-docs-synthetic-data.yaml  public-sector-vendor-scoring-synthetic-data.yaml  retail-receipt-ocr-synthetic-data.yaml  retail-returns-synthetic-data.yaml  telecom-billing-disputes-synthetic-data.yaml  telecom-billing-statement-docs-synthetic-data.yaml  telecom-cdr-synthetic-data.yaml
runs/campaign-20260304T151723Z-ipb2lh/: manifest.json
src/agentic_data_mcp/: __init__.py  (+7 more)
tests/: test_pipeline.py
(+177 files in other folders)
